tests/ui/imports/import4.stderr
error[E0432]: unresolved import `crate::b`
  --> $DIR/import4.rs:1:24
   |
LL | mod a { pub use crate::b::foo; }
   |                        ^ use of unresolved module or unlinked crate `b`
   |
help: you might be missing a crate named `b`, add it to your project and import it in your code
   |
LL + extern crate b;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
