tests/ui/imports/import4.rs
mod a { pub use crate::b::foo; } //~ ERROR unresolved import `crate::b`

fn main() { println!("loop"); }
